tools/solidity-parser/src/parser.rs
#[allow(unused_imports)]
use super::builder;
#[allow(unused_imports)]
use crate::chumsky::combinators::NomicParser;
use chumsky::{prelude::*, Parser};

pub type ErrorType = Simple<char>;
pub type SourceUnitParserResultType = ();

pub fn create_source_unit_parser(
) -> impl Parser<char, SourceUnitParserResultType, Error = ErrorType> {
    let mut block_parser = Recursive::declare();
    let mut expression_parser = Recursive::declare();
    let mut statement_parser = Recursive::declare();
    let mut type_name_parser = Recursive::declare();
    let mut yul_block_parser = Recursive::declare();
    let mut yul_expression_parser = Recursive::declare();
    let ascii_escape_parser = filter(|&c: &char| {
        c == 'n'
            || c == 'r'
            || c == 't'
            || c == '\''
            || c == '"'
            || c == '\\'
            || c == '\n'
            || c == '\r'
    })
    .map(builder::to_char);
    let boolean_literal_parser = choice::<_, ErrorType>((just("false"), just("true"))).ignored();
    let comment_parser = just("/*")
        .ignore_then(
            choice::<_, ErrorType>((
                filter(|&c: &char| c != '*').ignored(),
                just('*')
                    .repeated()
                    .at_least(1usize)
                    .then(filter(|&c: &char| (c != '*' && c != '/')))
                    .ignored(),
            ))
            .repeated(),
        )
        .then(just('*').repeated().at_least(1usize))
        .then_ignore(just('/'))
        .ignored();
    let decimal_integer_parser = filter(|&c: &char| c.is_ascii_digit())
        .separated_by(just('_').or_not())
        .at_least(1usize)
        .ignored();
    let fixed_bytes_type_parser = just("bytes")
        .ignore_then(choice::<_, ErrorType>((
            choice::<_, ErrorType>((
                just("10"),
                just("11"),
                just("12"),
                just("13"),
                just("14"),
                just("15"),
                just("16"),
                just("17"),
                just("18"),
                just("19"),
                just("20"),
                just("21"),
                just("22"),
                just("23"),
                just("24"),
                just("25"),
            )),
            choice::<_, ErrorType>((
                just("26"),
                just("27"),
                just("28"),
                just("29"),
                just("30"),
                just("31"),
                just("32"),
                just("1"),
                just("2"),
                just("3"),
                just("4"),
                just("5"),
                just("6"),
                just("7"),
                just("8"),
                just("9"),
            )),
        )))
        .map(builder::to_str);
    let fixed_type_parser = just("fixed")
        .ignore_then(
            filter(|&c: &char| ('1' <= c && c <= '9'))
                .then(filter(|&c: &char| c.is_ascii_digit()).repeated())
                .then_ignore(just('x'))
                .then(filter(|&c: &char| ('1' <= c && c <= '9')))
                .then(filter(|&c: &char| c.is_ascii_digit()).repeated())
                .or_not(),
        )
        .map(builder::to_str);
    let hex_character_parser =
        filter(|&c: &char| c.is_ascii_digit() || ('a' <= c && c <= 'f') || ('A' <= c && c <= 'F'))
            .ignored();
    let identifier_start_parser = filter(|&c: &char| {
        c == '_' || c == '$' || c.is_ascii_lowercase() || c.is_ascii_uppercase()
    });
    let line_comment_parser = just("//")
        .ignore_then(filter(|&c: &char| (c != '\n' && c != '\r')).repeated())
        .ignored();
    let number_unit_parser = choice::<_, ErrorType>((
        just("seconds"),
        just("minutes"),
        just("ether"),
        just("hours"),
        just("weeks"),
        just("years"),
        just("gwei"),
        just("days"),
        just("wei"),
    ))
    .ignored();
    let reserved_keyword_parser = choice::<_, ErrorType>((
        choice::<_, ErrorType>((
            just("relocatable"),
            just("implements"),
            just("reference"),
            just("supports"),
            just("default"),
            just("mutable"),
            just("partial"),
            just("promise"),
            just("typedef"),
            just("copyof"),
            just("define"),
            just("inline"),
            just("sealed"),
            just("sizeof"),
            just("static"),
            just("switch"),
        )),
        choice::<_, ErrorType>((
            just("typeof"),
            just("after"),
            just("alias"),
            just("apply"),
            just("final"),
            just("macro"),
            just("match"),
            just("auto"),
            just("byte"),
            just("case"),
            just("null"),
            just("let"),
            just("var"),
            just("in"),
            just("of"),
        )),
    ))
    .ignored();
    let signed_integer_type_parser = just("int")
        .ignore_then(choice::<_, ErrorType>((
            choice::<_, ErrorType>((
                just("104"),
                just("112"),
                just("120"),
                just("128"),
                just("136"),
                just("144"),
                just("152"),
                just("160"),
                just("168"),
                just("176"),
                just("184"),
                just("192"),
                just("200"),
                just("208"),
                just("216"),
                just("224"),
            )),
            choice::<_, ErrorType>((
                just("232"),
                just("240"),
                just("248"),
                just("256"),
                just("16"),
                just("24"),
                just("32"),
                just("40"),
                just("48"),
                just("56"),
                just("64"),
                just("72"),
                just("80"),
                just("88"),
                just("96"),
                just("8"),
            )),
        )))
        .map(builder::to_str);
    let whitespace_parser =
        filter(|&c: &char| c == ' ' || c == '\t' || c == '\r' || c == '\n').ignored();
    let yul_decimal_number_literal_parser = choice::<_, ErrorType>((
        just('0').map(builder::to_str).ignored(),
        filter(|&c: &char| ('1' <= c && c <= '9'))
            .chain(filter(|&c: &char| c.is_ascii_digit()).repeated())
            .map(builder::to_str)
            .ignored(),
    ))
    .ignored();
    let yul_evm_builtin_function_name_parser = choice::<_, ErrorType>((
        choice::<_, ErrorType>((
            just("returndatasize"),
            just("returndatacopy"),
            just("calldataload"),
            just("calldatasize"),
            just("calldatacopy"),
            just("delegatecall"),
            just("selfdestruct"),
            just("selfbalance"),
            just("extcodesize"),
            just("extcodecopy"),
            just("extcodehash"),
            just("signextend"),
            just("staticcall"),
            just("difficulty"),
            just("keccak256"),
            just("callvalue"),
        )),
        choice::<_, ErrorType>((
            just("blockhash"),
            just("timestamp"),
            just("callcode"),
            just("gasprice"),
            just("coinbase"),
            just("gaslimit"),
            just("mstore8"),
            just("address"),
            just("balance"),
            just("create2"),
            just("invalid"),
            just("chainid"),
            just("basefee"),
            just("iszero"),
            just("addmod"),
            just("mulmod"),
        )),
        choice::<_, ErrorType>((
            just("mstore"),
            just("sstore"),
            just("caller"),
            just("create"),
            just("return"),
            just("revert"),
            just("origin"),
            just("number"),
            just("mload"),
            just("sload"),
            just("msize"),
            just("stop"),
            just("sdiv"),
            just("smod"),
            just("byte"),
            just("call"),
        )),
        choice::<_, ErrorType>((
            just("log0"),
            just("log1"),
            just("log2"),
            just("log3"),
            just("log4"),
            just("add"),
            just("sub"),
            just("mul"),
            just("div"),
            just("mod"),
            just("exp"),
            just("not"),
            just("slt"),
            just("sgt"),
            just("and"),
            just("xor"),
        )),
        choice::<_, ErrorType>((
            just("shl"),
            just("shr"),
            just("sar"),
            just("pop"),
            just("gas"),
            just("lt"),
            just("gt"),
            just("eq"),
            just("or"),
        )),
    ))
    .ignored();
    let yul_hex_literal_parser = just("0x")
        .ignore_then(filter(|&c: &char| {
            c.is_ascii_digit() || ('a' <= c && c <= 'f') || ('A' <= c && c <= 'F')
        }))
        .then(
            filter(|&c: &char| {
                c.is_ascii_digit() || ('a' <= c && c <= 'f') || ('A' <= c && c <= 'F')
            })
            .repeated(),
        )
        .ignored();
    let yul_keyword_parser = choice::<_, ErrorType>((
        just("continue"),
        just("function"),
        just("default"),
        just("switch"),
        just("break"),
        just("leave"),
        just("case"),
        just("for"),
        just("let"),
        just("hex"),
        just("if"),
    ))
    .ignored();
    let pragma_directive_parser = just("pragma")
        .ignore_then(filter(|&c: &char| c != ';'))
        .then(filter(|&c: &char| c != ';').repeated())
        .then_ignore(just(';'))
        .ignored();
    let decimal_exponent_parser = filter(|&c: &char| c == 'e' || c == 'E')
        .then(just('-').or_not())
        .then_ignore(decimal_integer_parser.clone())
        .ignored();
    let decimal_float_parser = decimal_integer_parser
        .clone()
        .or_not()
        .then_ignore(just('.'))
        .then_ignore(decimal_integer_parser.clone())
        .ignored();
    let hex_byte_escape_parser = just('x')
        .ignore_then(
            hex_character_parser
                .clone()
                .repeated()
                .at_least(2usize)
                .at_most(2usize),
        )
        .map(builder::to_char);
    let hex_number_parser = just('0')
        .ignore_then(just('x'))
        .ignore_then(
            hex_character_parser
                .clone()
                .separated_by(just('_').or_not())
                .at_least(1usize),
        )
        .ignored();
    let ignore_parser = choice::<_, ErrorType>((
        whitespace_parser.clone().ignored(),
        comment_parser.clone().ignored(),
        line_comment_parser.clone().ignored(),
    ))
    .repeated()
    .ignored();
    let identifier_part_parser = choice::<_, ErrorType>((
        identifier_start_parser.clone(),
        filter(|&c: &char| c.is_ascii_digit()),
    ));
    let possibly_separated_pairs_of_hex_digits_parser = hex_character_parser
        .clone()
        .repeated()
        .at_least(2usize)
        .at_most(2usize)
        .separated_by(just('_').or_not())
        .at_least(1usize)
        .ignored();
    let ufixed_type_parser = just('u')
        .ignore_then(fixed_type_parser.clone())
        .map(builder::to_str);
    let unicode_escape_parser = just('u')
        .ignore_then(
            hex_character_parser
                .clone()
                .repeated()
                .at_least(4usize)
                .at_most(4usize),
        )
        .map(builder::to_char);
    let unsigned_integer_type_parser = just('u')
        .ignore_then(signed_integer_type_parser.clone())
        .map(builder::to_str);
    let yul_reserved_word_parser = choice::<_, ErrorType>((
        yul_keyword_parser.clone().ignored(),
        yul_evm_builtin_function_name_parser.clone().ignored(),
        boolean_literal_parser.clone().ignored(),
    ))
    .ignored();
    let decimal_number_parser = choice::<_, ErrorType>((
        decimal_integer_parser.clone().ignored(),
        decimal_float_parser.clone().ignored(),
    ))
    .then(decimal_exponent_parser.clone().or_not())
    .ignored();
    let escape_sequence_parser = just('\\').ignore_then(choice::<_, ErrorType>((
        ascii_escape_parser.clone(),
        hex_byte_escape_parser.clone(),
        unicode_escape_parser.clone(),
    )));
    let hex_string_literal_parser = just("hex")
        .ignore_then(choice::<_, ErrorType>((
            just('"')
                .ignore_then(
                    possibly_separated_pairs_of_hex_digits_parser
                        .clone()
                        .or_not(),
                )
                .then_ignore(just('"'))
                .ignored(),
            just('\'')
                .ignore_then(
                    possibly_separated_pairs_of_hex_digits_parser
                        .clone()
                        .or_not(),
                )
                .then_ignore(just('\''))
                .ignored(),
        )))
        .ignored();
    let keyword_parser = choice::<_, ErrorType>((
        choice::<_, ErrorType>((
            just("pragma").ignored(),
            just("abstract").ignored(),
            just("anonymous").ignored(),
            just("address").ignored(),
            just("as").ignored(),
            just("assembly").ignored(),
            just("bool").ignored(),
            just("break").ignored(),
            just("bytes").ignored(),
            just("calldata").ignored(),
            just("catch").ignored(),
            just("constant").ignored(),
            just("constructor").ignored(),
            just("continue").ignored(),
            just("contract").ignored(),
            just("delete").ignored(),
        )),
        choice::<_, ErrorType>((
            just("do").ignored(),
            just("else").ignored(),
            just("emit").ignored(),
            just("enum").ignored(),
            just("event").ignored(),
            just("external").ignored(),
            just("fallback").ignored(),
            just("false").ignored(),
            just("for").ignored(),
            just("function").ignored(),
            just("hex").ignored(),
            just("if").ignored(),
            just("immutable").ignored(),
            just("import").ignored(),
            just("indexed").ignored(),
            just("interface").ignored(),
        )),
        choice::<_, ErrorType>((
            just("internal").ignored(),
            just("is").ignored(),
            just("library").ignored(),
            just("mapping").ignored(),
            just("memory").ignored(),
            just("modifier").ignored(),
            just("new").ignored(),
            just("override").ignored(),
            just("payable").ignored(),
            just("private").ignored(),
            just("public").ignored(),
            just("pure").ignored(),
            just("receive").ignored(),
            just("return").ignored(),
            just("returns").ignored(),
            just("storage").ignored(),
        )),
        choice::<_, ErrorType>((
            just("string").ignored(),
            just("struct").ignored(),
            just("true").ignored(),
            just("try").ignored(),
            just("type").ignored(),
            just("unchecked").ignored(),
            just("using").ignored(),
            just("view").ignored(),
            just("virtual").ignored(),
            just("while").ignored(),
            signed_integer_type_parser.clone().ignored(),
            unsigned_integer_type_parser.clone().ignored(),
            fixed_bytes_type_parser.clone().ignored(),
            just("fixed").ignored(),
            just("ufixed").ignored(),
        )),
    ))
    .ignored();
    let raw_identifier_parser = identifier_start_parser
        .clone()
        .chain(identifier_part_parser.clone().repeated());
    let add_sub_operator_parser = filter(|&c: &char| c == '+' || c == '-').ignored().boxed();
    let assignment_operator_parser = choice::<_, ErrorType>((
        just(">>>="),
        just("<<="),
        just(">>="),
        just("|="),
        just("^="),
        just("&="),
        just("+="),
        just("-="),
        just("*="),
        just("/="),
        just("%="),
        just("="),
    ))
    .ignored()
    .boxed();
    let break_statement_parser = just("break")
        .then_ignore(ignore_parser.clone())
        .ignore_then(just(';').then_ignore(ignore_parser.clone()))
        .ignored()
        .boxed();
    let continue_statement_parser = just("continue")
        .then_ignore(ignore_parser.clone())
        .ignore_then(just(';').then_ignore(ignore_parser.clone()))
        .ignored()
        .boxed();
    let data_location_parser =
        choice::<_, ErrorType>((just("calldata"), just("storage"), just("memory")))
            .ignored()
            .boxed();
    let elementary_type_parser = choice::<_, ErrorType>((
        just("bool").then_ignore(ignore_parser.clone()),
